[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/Voxel-Core/engine/VoxelObjectEditor/VoxelObjectEditor.gd" type="Script" id=1]
[ext_resource path="res://addons/Voxel-Core/assets/controls/tools.png" type="Texture" id=2]
[ext_resource path="res://addons/Voxel-Core/controls/VoxelSetViewer/VoxelSetViewer.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/Voxel-Core/assets/controls/raw.png" type="Texture" id=4]
[ext_resource path="res://addons/Voxel-Core/assets/controls/mirrorz.png" type="Texture" id=5]
[ext_resource path="res://addons/Voxel-Core/assets/controls/mirrorx.png" type="Texture" id=6]
[ext_resource path="res://addons/Voxel-Core/assets/controls/mirrory.png" type="Texture" id=7]
[ext_resource path="res://addons/Voxel-Core/assets/controls/cancel.png" type="Texture" id=8]
[ext_resource path="res://addons/Voxel-Core/assets/controls/settings.png" type="Texture" id=9]
[ext_resource path="res://addons/Voxel-Core/assets/controls/info.png" type="Texture" id=10]
[ext_resource path="res://addons/Voxel-Core/assets/controls/commit.png" type="Texture" id=11]

[node name="VoxelObjectEditor" type="ScrollContainer"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 200 )
scroll_vertical_enabled = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 333.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 333.0
margin_bottom = 24.0

[node name="ToolButton" type="ToolButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 65.0
margin_bottom = 24.0
mouse_filter = 2
text = "Tools"
icon = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 69.0
margin_right = 333.0
margin_bottom = 24.0
size_flags_horizontal = 3
alignment = 2

[node name="Raw" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 191.0
margin_right = 264.0
margin_bottom = 24.0
text = "Raw"
icon = ExtResource( 4 )
flat = true

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 333.0
margin_bottom = 32.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 333.0
margin_bottom = 84.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 333.0
margin_bottom = 20.0

[node name="Tool" type="OptionButton" parent="HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 164.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="SelectMode" type="OptionButton" parent="HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 168.0
margin_right = 333.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 333.0
margin_bottom = 48.0

[node name="MirrorX" type="CheckBox" parent="HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 108.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Mirror X"
icon = ExtResource( 6 )

[node name="MirrorY" type="CheckBox" parent="HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 112.0
margin_right = 220.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Mirror Y"
icon = ExtResource( 7 )

[node name="MirrorZ" type="CheckBox" parent="HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 224.0
margin_right = 333.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Mirror Z"
icon = ExtResource( 5 )

[node name="VoxelSet" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 88.0
margin_right = 333.0
margin_bottom = 200.0
size_flags_vertical = 3
EditMode = false
SelectMode = false
SelectionMax = 0
Search = ""

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 337.0
margin_right = 341.0
margin_bottom = 200.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 345.0
margin_right = 678.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_right = 333.0
margin_bottom = 24.0

[node name="ToolButton" type="ToolButton" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 64.0
margin_bottom = 24.0
mouse_filter = 2
text = "More"
icon = ExtResource( 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 68.0
margin_right = 333.0
margin_bottom = 24.0
size_flags_horizontal = 3
alignment = 2

[node name="Lock" type="CheckBox" parent="HBoxContainer/VBoxContainer2/HBoxContainer/HBoxContainer"]
margin_left = 27.0
margin_right = 104.0
margin_bottom = 24.0
text = "Lock"
icon = ExtResource( 4 )
flat = true

[node name="Commit" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer/HBoxContainer"]
margin_left = 108.0
margin_right = 189.0
margin_bottom = 24.0
text = "Commit"
icon = ExtResource( 11 )

[node name="Cancel" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer/HBoxContainer"]
margin_left = 193.0
margin_right = 265.0
margin_bottom = 24.0
text = "Cancel"
icon = ExtResource( 8 )

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 333.0
margin_bottom = 32.0

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 333.0
margin_bottom = 200.0
size_flags_vertical = 3
tab_align = 0

[node name="VoxelObject" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Effects" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Export" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 682.0
margin_right = 686.0
margin_bottom = 200.0

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 690.0
margin_right = 1024.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3"]
margin_right = 334.0
margin_bottom = 24.0

[node name="ToolButton" type="ToolButton" parent="HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_right = 82.0
margin_bottom = 24.0
mouse_filter = 2
text = "Settings"
icon = ExtResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 86.0
margin_right = 334.0
margin_bottom = 24.0
size_flags_horizontal = 3
alignment = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer3"]
margin_top = 28.0
margin_right = 334.0
margin_bottom = 32.0

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/VBoxContainer3"]
margin_top = 36.0
margin_right = 334.0
margin_bottom = 200.0
size_flags_vertical = 3
tab_align = 0

[node name="General" type="VBoxContainer" parent="HBoxContainer/VBoxContainer3/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cursor" type="VBoxContainer" parent="HBoxContainer/VBoxContainer3/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Grid" type="VBoxContainer" parent="HBoxContainer/VBoxContainer3/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="About" type="VBoxContainer" parent="HBoxContainer/VBoxContainer3/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
